--- a/bors.toml
+++ b/bors.toml
@@ -1,4 +1,4 @@
-status = ["[Yamato] Run all test projects on all platforms"]
+status = ["[Yamato] ABV for SRP repository - trunk"]
 timeout_sec = 2700
 required_approvals = 1
 delete_merged_branches = false
