add staging trigger

--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -43,6 +43,7 @@ all_project_ci_{{ editor.version }}:
     branches:
       only:
         - trying
+        - staging
   {% endif %}
 {% endfor %}
 
