--- a/.yamato/upm-ci-universal.yml
+++ b/.yamato/upm-ci-universal.yml
@@ -20,6 +20,10 @@ platforms:
     type: Unity::VM::GPU
     image: cds-ops/ubuntu-18.04-base:latest
     flavor: b1.large
+  - name: Android
+    type: Unity::mobile::android
+    image: mobile/android-execution:r19-390185
+    flavor: b1.large
 testplatforms:
   - name: Standalone
     args: --suite=playmode --platform=Standalone
@@ -64,14 +68,14 @@ linux_apis:
     type: Unity::VM
     {% else %}
     type: {{ platform.type }}
-    {% endif %} 
-    image: {{ platform.image }}      
+    {% endif %}
+    image: {{ platform.image }}
     flavor: {{ platform.flavor }}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published    
+    - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
 
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr\utr {{ testplatform.args }}Windows64 --extra-editor-arg="-executemethod" --extra-editor-arg="CustomBuild.BuildWindows{{ win_api.name }}Linear" --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
@@ -82,7 +86,7 @@ linux_apis:
     logs:
       paths:
         - "**/test-results/**"
-{% endfor %}    
+{% endfor %}
 {% endfor %}
 
 {% elsif platform.name == "OSX_OpenGLCore" %}
@@ -92,14 +96,14 @@ linux_apis:
   name : {{ project.name }} on OSX_OpenGLCore_{{ testplatform.name }} on version {{ editor.version }}
   agent:
     type: {{ platform.type }}
-    image: {{ platform.image }}      
+    image: {{ platform.image }}
     flavor: {{ platform.flavor }}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
     - cd TestProjects/{{ project.folder }} && unity-downloader-cli {{ editor.cmd }} -c editor --wait --published
-    
+
     {% if testplatform.name == "Standalone" %}
     - cd TestProjects/{{ project.folder }} && utr/utr {{ testplatform.args }}OSX --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results --timeout=1200
     {% else %}
@@ -121,11 +125,11 @@ linux_apis:
   name : {{ project.name }} on OSX_Metal_{{ testplatform.name }} on version {{ editor.version }}
   agent:
     type: {{ platform.type }}
-    image: {{ platform.image }}      
+    image: {{ platform.image }}
     flavor: {{ platform.flavor }}
   commands:
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
-    
+
     - ssh -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install --user unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple'"
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" -r ../ScriptableRenderPipeline/ bokken@$BOKKEN_DEVICE_IP:~/ScriptableRenderPipeline
     - scp -i ~/.ssh/id_rsa_macmini -o "StrictHostKeyChecking=no" ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
@@ -161,8 +165,8 @@ linux_apis:
     type: Unity::VM
     {% else %}
     type: {{ platform.type }}
-    {% endif %} 
-    image: {{ platform.image }}      
+    {% endif %}
+    image: {{ platform.image }}
     flavor: {{ platform.flavor }}
   commands:
     - sudo -H pip install --upgrade pip
@@ -178,38 +182,36 @@ linux_apis:
   artifacts:
     logs:
       paths:
-        - "**/test-results/**/*"  
-{% endfor %}   
+        - "**/test-results/**/*"
+{% endfor %}
 {% endfor %}
 
-{% for mobile in mobiles %}
-{% for project in projects %}
-{% for editor in editors %}
-{{ project.name }}_{{ mobile.name }}_{{ editor.version }}:
-  name: Build and Test {{ project.name }} on {{ mobile.name }} on version {{ editor.version }}
+{% elsif platform.name == "Android" %}
+
+
+{{ project.name }}_Android_{{ editor.version }}:
+  name: {{ project.name }} on Android on version {{ editor.version }}
   agent:
-    type: {{ mobile.type }}
-    image: {{ mobile.image }}
-    flavor: {{ mobile.flavor }}
+    type: {{ platform.type }}
+    image: {{ platform.image }}
+    flavor: {{ platform.flavor }}
   commands:
    - wget http://artifactory-slo.bf.unity3d.com/artifactory/ie-generic-core-automation/tools/android/shield/adbkey.pub -O %USERPROFILE%/.android/adbkey.pub
    - wget http://artifactory-slo.bf.unity3d.com/artifactory/ie-generic-core-automation/tools/android/shield/adbkey -O %USERPROFILE%/.android/adbkey
    - pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
    - git clone git@github.cds.internal.unity3d.com:unity/utr.git utr
-   - unity-downloader-cli -b {{ editor.version }} -p WindowsEditor -c editor -c {{ mobile.name }} --wait
+   - unity-downloader-cli {{ editor.cmd }} -p WindowsEditor -c editor -c Android --wait
    - >
       %ANDROID_SDK_ROOT%\platform-tools\adb.exe connect %BOKKEN_DEVICE_IP%
    - powershell %ANDROID_SDK_ROOT%\platform-tools\adb.exe devices
    - NetSh Advfirewall set allprofiles state off
-   - utr\utr --suite=playmode --platform={{ mobile.name }} --testproject=TestProjects\{{ project.folder }} --editor-location=WindowsEditor --artifacts_path=upm-ci~\test-results --scripting-backend=il2cpp --timeout=1200
+   - utr\utr --suite=playmode --platform=Android --testproject=TestProjects\{{ project.folder }} --editor-location=WindowsEditor --artifacts_path=test-results --scripting-backend=il2cpp --timeout=1200
    - start %ANDROID_SDK_ROOT%\platform-tools\adb.exe kill-server
   artifacts:
     logs:
       paths:
-        - "**/upm-ci~/test-results/**/*"
-{% endfor %}
-{% endfor %}
-{% endfor %}
+        - "**test-results/**/*"
+
 
 {% endif %}
 {% endfor %}
@@ -230,12 +232,15 @@ All_{{ project.name }}_{{ editor.version }}:
   {% if testplatform.name == "editmode" %}
     - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endif %}
-  
+
+  {% elsif platform.name == "Android" %}
+   #skip
+
   {% elsif platform.name == "Linux" %}
   #skip
-  
+
   {% elsif platform.name == "OSX_Metal"  and testplatform.name == "editmode" %}
-  
+
 
   {% elsif platform.name == "Windows64" %}
   {% for win_api in win_apis %}
@@ -252,6 +257,6 @@ All_{{ project.name }}_{{ editor.version }}:
 
   {% endfor %}
   {% endfor %}
-  
+
 {% endfor %}
 {% endfor %}
