--- a/bors.toml
+++ b/bors.toml
@@ -2,3 +2,4 @@ status = ["[Yamato] ABV for SRP repository - trunk"]
 timeout_sec = 2700
 required_approvals = 1
 delete_merged_branches = false
+use_squash_merge = true
