Refactor custom post process to expose material and injection point

--- a/com.unity.render-pipelines.high-definition/Editor/PostProcessing/Templates/CustomPostProcessingVolume.template
+++ b/com.unity.render-pipelines.high-definition/Editor/PostProcessing/Templates/CustomPostProcessingVolume.template
@@ -6,33 +6,26 @@ using System;
 [Serializable, VolumeComponentMenu("Post-processing/Custom/#NAME#")]
 public sealed class #SCRIPTNAME# : CustomPostProcessVolumeComponent, IPostProcessComponent
 {
-    [Tooltip("Controls the intensity of the effect.")]
-    public ClampedFloatParameter intensity = new ClampedFloatParameter(0f, 0f, 1f);
+    public MaterialParameter m_MaterialParameter = new MaterialParameter(null);
+    public InjectionPointParameter m_InjectionPoint = new InjectionPointParameter(CustomPostProcessInjectionPoint.AfterPostProcess);
 
-    Material m_Material;
+    public bool IsActive() => m_MaterialParameter.value != null;
 
-    public bool IsActive() => m_Material != null && intensity.value > 0f;
+    public override CustomPostProcessInjectionPoint injectionPoint => m_InjectionPoint.value;
 
-    public override CustomPostProcessInjectionPoint injectionPoint => CustomPostProcessInjectionPoint.AfterPostProcess;
-
-    public override void Setup()
+    public override void Render(CommandBuffer cmd, HDCamera camera, int srcShaderID, RTHandle source, RTHandle destination)
     {
-        if (Shader.Find("Hidden/Shader/#SCRIPTNAME#") != null)
-            m_Material = new Material(Shader.Find("Hidden/Shader/#SCRIPTNAME#"));
-    }
-
-    public override void Render(CommandBuffer cmd, HDCamera camera, RTHandle source, RTHandle destination)
-    {
-        if (m_Material == null)
+        if (m_MaterialParameter.value == null)
             return;
 
-        m_Material.SetFloat("_Intensity", intensity.value);
-        m_Material.SetTexture("_InputTexture", source);
-        HDUtils.DrawFullScreen(cmd, m_Material, destination);
+        m_MaterialParameter.value.SetTexture(srcShaderID, source);
+            
+        int passIndex = m_MaterialParameter.value.FindPass("PostProcess");
+        HDUtils.DrawFullScreen(cmd, m_MaterialParameter.value, destination, null, passIndex);
     }
 
     public override void Cleanup()
     {
-        CoreUtils.Destroy(m_Material);
+        CoreUtils.Destroy(m_MaterialParameter.value);
     }
 }
