--- a/com.unity.render-pipelines.high-definition/Editor/PostProcessing/Templates/CustomPostProcessingShader.template
+++ b/com.unity.render-pipelines.high-definition/Editor/PostProcessing/Templates/CustomPostProcessingShader.template
@@ -1,4 +1,4 @@
-Shader "Hidden/Shader/#SCRIPTNAME#"
+Shader "HDRP/PostProcess/#SCRIPTNAME#"
 {
     HLSLINCLUDE
 
@@ -20,7 +20,6 @@ Shader "Hidden/Shader/#SCRIPTNAME#"
     struct Varyings
     {
         float4 positionCS : SV_POSITION;
-        float2 texcoord   : TEXCOORD0;
         UNITY_VERTEX_OUTPUT_STEREO
     };
 
@@ -30,22 +29,15 @@ Shader "Hidden/Shader/#SCRIPTNAME#"
         UNITY_SETUP_INSTANCE_ID(input);
         UNITY_INITIALIZE_VERTEX_OUTPUT_STEREO(output);
         output.positionCS = GetFullScreenTriangleVertexPosition(input.vertexID);
-        output.texcoord = GetFullScreenTriangleTexCoord(input.vertexID);
         return output;
     }
 
-    // List of properties to control your post process effect
-    float _Intensity;
-    TEXTURE2D_X(_InputTexture);
 
     float4 CustomPostProcess(Varyings input) : SV_Target
     {
         UNITY_SETUP_STEREO_EYE_INDEX_POST_VERTEX(input);
-
-        uint2 positionSS = input.texcoord * _ScreenSize.xy;
-        float3 outColor = LOAD_TEXTURE2D_X(_InputTexture, positionSS).xyz;
-
-        return float4(outColor, 1);
+        float4 outColor = LOAD_TEXTURE2D_X(_PostProcessInputTexture, input.positionCS.xy);
+        return outColor;
     }
 
     ENDHLSL
@@ -54,7 +46,7 @@ Shader "Hidden/Shader/#SCRIPTNAME#"
     {
         Pass
         {
-            Name "#NAME#"
+            Name "PostProcess"
 
             ZWrite Off
             ZTest Always
