Fix issue with normal bending rename

--- a/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassVS.template
+++ b/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassVS.template
@@ -165,13 +165,13 @@ VFX_VARYING_PS_INPUTS vert(uint id : SV_VertexID, vs_input i)
 	o.VFX_VARYING_TANGENT = normalize(TransformDirectionVFXToWorld(normalize(transpose(elementToVFX)[0].xyz)));
 	#endif
 	#ifdef VFX_VARYING_BENTFACTORS
-	${VFXLoadParameter:{bentNormalFactor}}
+	${VFXLoadParameter:{normalBendingFactor}}
 	#if HAS_STRIPS
 	#define BENT_FACTOR_MULTIPLIER 2.0f
 	#else
 	#define BENT_FACTOR_MULTIPLIER 1.41421353816986083984375f
 	#endif
-	o.VFX_VARYING_BENTFACTORS = vOffsets * bentNormalFactor * BENT_FACTOR_MULTIPLIER;
+	o.VFX_VARYING_BENTFACTORS = vOffsets * normalBendingFactor * BENT_FACTOR_MULTIPLIER;
 	#endif
 	
 	${VFXVertexComputeCurrentAndPreviousClipPos}
