disabled project update to manifest so I can run test

--- a/TestProjects/HDRP_RuntimeTests/Packages/manifest.json
+++ b/TestProjects/HDRP_RuntimeTests/Packages/manifest.json
@@ -58,5 +58,6 @@
     "com.unity.render-pipelines.high-definition",
     "com.unity.testframework.graphics",
     "com.unity.testing.hdrp"
-  ]
+  ],
+  "disableProjectUpdate": true
 }
