--- a/.yamato/upm-ci-postprocessing.yml
+++ b/.yamato/upm-ci-postprocessing.yml
@@ -148,7 +148,7 @@ linux_apis:
   commands:
     - sudo -H pip install --upgrade pip
     - sudo -H pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
-    - sudo npm install upm-ci-utils@stable -g --registry https://api.bintray.com/npm/unity/unity-npm
+    - sudo npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
     - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
     - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli -b {{ editor.version }} -c editor --wait --published
     {% if testplatform.name == "Standalone" %}
