--- a/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassVS.template
+++ b/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassVS.template
@@ -86,6 +86,10 @@ VFX_VARYING_PS_INPUTS vert(uint id : SV_VertexID, vs_input i)
 	o.VFX_VARYING_UV.y = float((id & 2) >> 1);
 	const float2 vOffsets = float2(0.0f,o.VFX_VARYING_UV.y - 0.5f);
 	
+#if VFX_STRIPS_SWAP_UV
+	o.VFX_VARYING_UV.xy = float2(1.0f - o.VFX_VARYING_UV.y, o.VFX_VARYING_UV.x);
+#endif
+	
 	// Orient strips along their tangents
 	attributes.axisX = GetStripTangent(attributes.position, currentIndex, stripData);
 #if !VFX_STRIPS_ORIENT_CUSTOM
