--- a/com.unity.render-pipelines.core/package.json
+++ b/com.unity.render-pipelines.core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "com.unity.render-pipelines.core",
-    "description": "Helper library for SRP that contains a new Shader Library, and utility functions that can be used to implement a custom SRP. This library is currently used by both the High Definition Render Pipeline and the Lightweight Render Pipeline.",
+    "description": "Helper library that allows you to create a custom Scriptable Render Pipeline (SRP). This package contains a new Shader Library, and utility functions that expose SRP internals. This library is used by the High Definition Render Pipeline (HDRP) and the Universal Render Pipeline (URP).",
     "version": "8.0.0",
     "unity": "2020.1",
     "unityRelease": "0a11",
