--- a/TestProjects/PostProcessing/Packages/manifest.json
+++ b/TestProjects/PostProcessing/Packages/manifest.json
@@ -2,18 +2,18 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "2.0.8",
+    "com.unity.ads": "3.3.1",
     "com.unity.analytics": "3.3.2",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.0",
-    "com.unity.ide.vscode": "1.1.0",
+    "com.unity.ide.vscode": "1.1.2",
     "com.unity.multiplayer-hlapi": "1.0.4",
     "com.unity.postprocessing": "2.1.6",
     "com.unity.purchasing": "2.0.6",
     "com.unity.test-framework": "1.1.1",
     "com.unity.testframework.graphics": "file:../../../com.unity.testframework.graphics",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.2",
+    "com.unity.timeline": "1.3.0-preview.3",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "1.3.7",
     "com.unity.modules.ai": "1.0.0",
@@ -51,5 +51,6 @@
   "testables": [
     "com.unity.postprocessing",
     "com.unity.testframework.graphics"
-  ]
+  ],
+  "disableProjectUpdate": true
 }
