--- a/TestProjects/VisualEffectGraph/Packages/manifest.json
+++ b/TestProjects/VisualEffectGraph/Packages/manifest.json
@@ -25,5 +25,6 @@
     "com.unity.testing.visualeffectgraph",
     "com.unity.render-pipelines.visualeffectgraph",
     "com.unity.testframework.graphics"
-  ]
+  ],
+  "disableProjectUpdate": true
 }
