--- a/TestProjects/SRP_SmokeTest/Packages/manifest.json
+++ b/TestProjects/SRP_SmokeTest/Packages/manifest.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.1",
     "com.unity.ide.visualstudio": "1.0.11",
@@ -9,10 +7,13 @@
     "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
     "com.unity.render-pipelines.universal": "file:../../../com.unity.render-pipelines.universal",
     "com.unity.shadergraph": "file:../../../com.unity.shadergraph",
-    "com.unity.test-framework": "1.1.5",
+    "com.unity.test-framework": "1.1.3",
     "com.unity.testframework.graphics": "file:../../../com.unity.testframework.graphics",
+	"com.unity.render-pipelines.high-definition": "file:../../../com.unity.render-pipelines.high-definition",
+    "com.unity.render-pipelines.high-definition-config": "file:../../../com.unity.render-pipelines.high-definition-config",
+	"com.unity.visualeffectgraph": "file:../../../com.unity.visualeffectgraph",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.0.4",
+    "com.unity.xr.legacyinputhelpers": "2.0.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -45,10 +46,8 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "disableProjectUpdate": true,
   "testables": [
     "com.unity.render-pipelines.core",
-    "com.unity.render-pipelines.universal",
     "com.unity.testframework.graphics"
   ]
 }
