--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -4,6 +4,7 @@ editors:
   - version: fast-trunk
     cmd: -u trunk --fast
   - version: CUSTOM-REVISION
+    cmd: -u %CUSTOM_REVISION%
 projects:
   - name: Universal
     folder: UniversalGraphicsTest
@@ -37,7 +38,7 @@ all_project_ci_{{ editor.version }}:
     image: cds-ops/ubuntu-18.04-agent:latest
     flavor: b1.small
   commands:
-  - dir
+    - dir
   dependencies:
   {% for project in projects %}
     - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#All_{{ project.name }}_{{ editor.version }}
@@ -59,7 +60,7 @@ all_project_ci_nightly:
     image: cds-ops/ubuntu-18.04-agent:latest
     flavor: b1.small
   commands:
-  - dir
+    - dir
   dependencies:
   {% for project in projects %}
     - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#All_{{ project.name }}_trunk
@@ -82,7 +83,11 @@ all_project_ci_nightly:
 smoke_test_{{ testplatform.name }}_{{ editor.version }}:
   name: SRP Smoke Test - {{ testplatform.name }}_{{ editor.version }}
   agent:
+    {% if testplatform.name == "editmode" %}
+    type: Unity::VM
+    {% else %}
     type: Unity::VM::GPU
+    {% endif %}
     image: sdet/gamecode_win10:stable
     flavor: b1.large
   commands:
@@ -110,7 +115,7 @@ all_smoke_tests:
     image: cds-ops/ubuntu-18.04-agent:latest
     flavor: b1.small
   commands:
-  - dir
+    - dir
   dependencies:
   {% for testplatform in testplatforms %} 
   {% for editor in editors %}
@@ -123,5 +128,25 @@ all_smoke_tests:
         - "**/test-results/**"
 
 trunk_verification:
-  name: Trunk verification
-  agent:
+  name: z_(do not use) Trunk verification 
+  dependencies:
+    {% for project in projects %}  
+    {% for testplatform in testplatforms %}
+    {% if project.name == "HDRP_Standalone" %}
+    # skip
+    {% else %}
+    {% if testplatform.name == "Standalone" %}
+    # skip
+    {% else %}
+
+    {% if testplatform.name == "editmode" and project.name == "VFX_LWRP" %}
+    #skip
+    {% else %}
+    
+    - path: .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_Windows64_DX11_{{ testplatform.name }}_CUSTOM-REVISION
+      rerun: always
+    {% endif %}
+    {% endif %}
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
