--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -115,7 +115,7 @@ All_{{ project.name }}_{{ editor.version }}:
   agent:
     name: whatever
     type: Unity::VM
-    image: cds-ops/ubuntu-18.04-agent:latest
+    image: cds-ops/ubuntu-18.04-base:stable
     flavor: b1.small
   commands:
     - dir
