--- a/.yamato/upm-ci-hdrp_standalone.yml
+++ b/.yamato/upm-ci-hdrp_standalone.yml
@@ -111,7 +111,7 @@ All_{{ project.name }}_{{ editor.version }}:
   agent:
     name: whatever
     type: Unity::VM
-    image: cds-ops/ubuntu-18.04-agent:latest
+    image: cds-ops/ubuntu-18.04-base:stable
     flavor: b1.small
   commands:
     - dir
