--- a/.yamato/upm-ci-postprocessing.yml
+++ b/.yamato/upm-ci-postprocessing.yml
@@ -143,7 +143,7 @@ linux_apis:
     {% else %}
     type: Unity::VM::GPU
     {% endif %} 
-    image: cds-ops/ubuntu-18.04-base:latest
+    image: cds-ops/ubuntu-18.04-base:stable
     flavor: b1.large
   commands:
     - sudo -H pip install --upgrade pip
@@ -169,7 +169,7 @@ All_{{ project.name }}:
   agent:
     name: whatever
     type: Unity::VM
-    image: cds-ops/ubuntu-18.04-agent:latest
+    image: cds-ops/ubuntu-18.04-base:stable
     flavor: b1.small
   commands:
     - dir
