--- a/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassVS.template
+++ b/com.unity.visualeffectgraph/Shaders/ParticlePlanarPrimitives/PassVS.template
@@ -86,6 +86,10 @@ VFX_VARYING_PS_INPUTS vert(uint id : SV_VertexID, vs_input i)
 	o.VFX_VARYING_UV.y = float((id & 2) >> 1);
 	const float2 vOffsets = float2(0.0f,o.VFX_VARYING_UV.y - 0.5f);
 	
+#if VFX_STRIPS_SWAP_UV
+	o.VFX_VARYING_UV.xy = float2(1.0f - o.VFX_VARYING_UV.y, o.VFX_VARYING_UV.x);
+#endif
+	
 	// Orient strips along their tangents
 	attributes.axisX = GetStripTangent(attributes.position, currentIndex, stripData);
 #if !VFX_STRIPS_ORIENT_CUSTOM
@@ -165,13 +169,13 @@ VFX_VARYING_PS_INPUTS vert(uint id : SV_VertexID, vs_input i)
 	o.VFX_VARYING_TANGENT = normalize(TransformDirectionVFXToWorld(normalize(transpose(elementToVFX)[0].xyz)));
 	#endif
 	#ifdef VFX_VARYING_BENTFACTORS
-	${VFXLoadParameter:{bentNormalFactor}}
+	${VFXLoadParameter:{normalBendingFactor}}
 	#if HAS_STRIPS
 	#define BENT_FACTOR_MULTIPLIER 2.0f
 	#else
 	#define BENT_FACTOR_MULTIPLIER 1.41421353816986083984375f
 	#endif
-	o.VFX_VARYING_BENTFACTORS = vOffsets * bentNormalFactor * BENT_FACTOR_MULTIPLIER;
+	o.VFX_VARYING_BENTFACTORS = vOffsets * normalBendingFactor * BENT_FACTOR_MULTIPLIER;
 	#endif
 	
 	${VFXVertexComputeCurrentAndPreviousClipPos}
