--- a/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitPass.template
@@ -32,6 +32,7 @@ Pass
     #pragma shader_feature_local _DOUBLESIDED_ON
     #pragma shader_feature_local _ _BLENDMODE_ALPHA _BLENDMODE_ADD _BLENDMODE_PRE_MULTIPLY
 
+    #define _DISABLE_SSR 0 // We need to define it all the time since we cannot set a uniform _ReceivesSSR without serialization issues
     //-------------------------------------------------------------------------------------
     // Variant Definitions (active field translations to HDRP defines)
     //-------------------------------------------------------------------------------------
@@ -51,6 +52,7 @@ Pass
     $RefractionBox:                      #define _REFRACTION_PLANE 1
     $RefractionSphere:                   #define _REFRACTION_SPHERE 1
     $DisableDecals:                      #define _DISABLE_DECALS 1
+    $DisableSSR:                         #undef _DISABLE_SSR
     $DisableSSR:                         #define _DISABLE_SSR 1
     $AddPrecomputedVelocity:           #define _ADD_PRECOMPUTED_VELOCITY
     $TransparentWritesMotionVec:         #define _WRITE_TRANSPARENT_MOTION_VECTOR 1
