--- a/.yamato/upm-ci-hdrp_dxr.yml
+++ b/.yamato/upm-ci-hdrp_dxr.yml
@@ -4,7 +4,7 @@ editors:
   - version: fast-trunk
     cmd: -u trunk --fast
 platforms:
-  - name: Windows64
+  - name: Win
     type: Unity::VM::GPU
     image: sdet/gamecode_win10:stable
     flavor: b1.large
@@ -34,12 +34,12 @@ win_apis:
 {% for editor in editors %}
 {% for platform in platforms %}
 
-{% if platform.name == "Windows64" %}
+{% if platform.name == "Win" %}
 
 {% for testplatform in testplatforms %}
 {% for win_api in win_apis %}
-{{ project.name }}_Windows64_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}:
-  name : {{ project.name }} on Windows64_{{ testplatform.name }}_{{ win_api.name }} on version {{ editor.version }}
+{{ project.name }}_Win_{{ win_api.name }}_{{ testplatform.name }}_{{ editor.version }}:
+  name : {{ project.name }} on Win_{{ testplatform.name }}_{{ win_api.name }} on version {{ editor.version }}
   agent:
     type: {{ platform.type }}
     model: rtx2080
@@ -113,7 +113,10 @@ All_{{ project.name }}:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
   {% for win_api in win_apis %}
-    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_Windows64_{{ win_api.name }}_{{ testplatform.name }}_trunk
+  {% if win_api.name == "DX12" %}
+  #skip
+  {% else %}
+    - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_Win_{{ win_api.name }}_{{ testplatform.name }}_trunk
   {% endfor %}
   {% endfor %}
   {% endfor %}
