Switch to graphics/vfx/fix/read-attribute-in-spawner for testing purpose

--- a/.yamato/upm-ci-vfx_lwrp.yml
+++ b/.yamato/upm-ci-vfx_lwrp.yml
@@ -1,6 +1,6 @@
 editors:
-  - version: trunk
-    cmd: -u trunk
+  - version: graphics/vfx/fix/read-attribute-in-spawner
+    cmd: -u graphics/vfx/fix/read-attribute-in-spawner
   - version: fast-trunk
     cmd: -u trunk --fast
 platforms:
