Add vxshadows into universal rp

--- a/com.unity.render-pipelines.universal/Runtime/Unity.RenderPipelines.Universal.Runtime.asmdef
+++ b/com.unity.render-pipelines.universal/Runtime/Unity.RenderPipelines.Universal.Runtime.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "GUID:d60799ab2a985554ea1a39cd38695018",
         "GUID:df380645f10b7bc4b97d4f5eb6303d95",
-        "GUID:ab67fb10353d84448ac887a7367cbda8"
+        "GUID:ab67fb10353d84448ac887a7367cbda8",
+        "GUID:a351bbf1678462b4db41a74418076783"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
