--- a/.yamato/upm-ci-hdrp_dxr.yml
+++ b/.yamato/upm-ci-hdrp_dxr.yml
@@ -109,6 +109,10 @@ All_{{ project.name }}:
     flavor: b1.small
   commands:
     - dir
+  {% if editor.version == 'CUSTOM-REVISION' %}
+  variables:
+    CUSTOM_REVISION: custom_revision_not_set
+  {% endif %}
   dependencies:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
