--- a/.yamato/upm-ci-abv.yml
+++ b/.yamato/upm-ci-abv.yml
@@ -177,4 +177,8 @@ trunk_verification_{{ editor.version }}:
     {% endif %}
     {% endfor %}
     {% endfor %}
+  artifacts:
+    logs:
+      paths:
+        - "**/test-results/**"
 {% endfor %}    
