comment out rtx2080s as these dont work on bokken currently. cherry pick

--- a/.yamato/upm-ci-vfxmain.yml
+++ b/.yamato/upm-ci-vfxmain.yml
@@ -47,7 +47,7 @@ win_apis:
     type: Unity::VM
     {% else %}
     type: {{ platform.type }}
-    model: rtx2080
+    #model: rtx2080
     {% endif %}
     image: {{ platform.image }}
     flavor: {{ platform.flavor}}
