--- a/.yamato/upm-ci-hdrp.yml
+++ b/.yamato/upm-ci-hdrp.yml
@@ -57,7 +57,7 @@ linux_apis:
     type: Unity::VM
     {% else %}
     type: {{ platform.type }}
-    model: rtx2080
+    #model: rtx2080
     {% endif %}
     image: {{ platform.image }}
     flavor: {{ platform.flavor}}
