fixing up package manifest files are committing meta files

--- a/TestProjects/PostProcessing/Packages/manifest.json
+++ b/TestProjects/PostProcessing/Packages/manifest.json
@@ -47,5 +47,6 @@
   "testables": [
     "com.unity.postprocessing",
     "com.unity.testframework.graphics"
-  ]
+  ],
+  "disableProjectUpdate": true
 }
