--- a/TestProjects/ShaderGraph/Packages/manifest.json
+++ b/TestProjects/ShaderGraph/Packages/manifest.json
@@ -50,5 +50,6 @@
   "testables": [
     "com.unity.shadergraph",
     "com.unity.testframework.graphics"
-  ]
+  ],
+  "disableProjectUpdate": true
 }
