--- a/TestProjects/HDRP_RuntimeTests/Packages/manifest.json
+++ b/TestProjects/HDRP_RuntimeTests/Packages/manifest.json
@@ -54,5 +54,6 @@
     "com.unity.render-pipelines.high-definition",
     "com.unity.testframework.graphics",
     "com.unity.testing.hdrp"
-  ]
+  ],
+  "disableProjectUpdate": true
 }
